--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@prisma/client": "^5.5.2",
     "class-validator": "^0.14.1",
     "ldapjs": "^3.0.7",
+    "moment": "^2.30.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
