--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.5.2",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "ldapjs": "^3.0.7",
     "moment": "^2.30.1",
+    "mysql2": "^3.11.3",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
